# nebu-processor-registry

./: .gitignore  BUILDING_PROTO_PROCESSORS.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  PROCESSORS.md  README.md  SETUP.md  STATUS.md  flake.nix
.github/workflows/: validate-pr.yml
docs/: GRADUATING_TO_FLOWCTL.md
mcp/: README.md  pyproject.toml
mcp/nebu_mcp/: __init__.py  config.py  server.py
mcp/nebu_mcp/formatters/: __init__.py  compact.py  summary.py
mcp/nebu_mcp/tools/: __init__.py  discovery.py  extract.py  fetch.py  pipeline.py
processors/.template/: description.yml
processors/account-effects/: account_effects.go  account_effects.pb.go  account_effects.proto  description.yml  go.mod
processors/account-filter/: description.yml  go.mod
processors/aggregator/: description.yml  go.mod
processors/amount-filter/: README.md  description.yml  filter.go  go.mod  go.sum
processors/aquarius-detector/: description.yml  go.mod  go.sum
processors/asset-filter/: description.yml  go.mod
processors/contract-created/: HEURISTICS.md  README.md  candidate.go  contract_created.go  contract_created.pb.go  contract_created.proto  contract_created_test.go  description.yml  go.mod  heuristics.go
processors/contract-events/: README.md  contract_events.go  contract_events.pb.go  contract_events.proto  description.yml  go.mod
processors/contract-filter/: description.yml  go.mod
processors/contract-invocation/: description.yml  go.mod  helpers.go  processor.go
scripts/: build-processor.sh  generate-list.sh  validate-processor.sh
shapes/: new-processors.md
(+146 files in other folders)
