[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebu-mcp"
version = "0.1.0"
description = "MCP server for nebu - Stellar blockchain data extraction with agent-friendly defaults"
readme = "README.md"
license = "MIT"
authors = [
    { name = "OBSRVR", email = "hello@withobsrvr.com" }
]
keywords = ["stellar", "blockchain", "mcp", "nebu", "data-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
nebu-mcp = "nebu_mcp.server:run"

[project.urls]
Homepage = "https://github.com/withObsrvr/nebu-processor-registry"
Repository = "https://github.com/withObsrvr/nebu-processor-registry"
Documentation = "https://github.com/withObsrvr/nebu-processor-registry/tree/main/mcp"

[tool.hatch.build.targets.wheel]
packages = ["nebu_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/nebu_mcp",
]
